fix(directory-inspection-api): expose under /api
